<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.ΜiWeather.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ΜWeather.AppWidgetContainer">

    <TextClock
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:format12Hour="@string/date_format_12h"
        android:format24Hour="@string/date_format_24h"
        android:gravity="top|center_horizontal"
        android:text="@string/date_default"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextClock
        android:id="@+id/clockView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-24dp"
        android:fontFamily="@font/inter_bold"
        android:format12Hour="@string/time_format_12h"
        android:format24Hour="@string/time_format_24h"
        android:gravity="top|center_horizontal"
        android:maxHeight="100dp"
        android:paddingTop="0dp"
        android:text="@string/time_default"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="90sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh_button_desc"
        android:scaleType="center"
        android:src="@android:drawable/stat_notify_sync" />

    <LinearLayout
        android:id="@+id/loadingView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:orientation="horizontal">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/rangeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/rangeImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/maxTempArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arrow_up_desc"
                    android:src="@drawable/ic_arrow_up"
                    android:tint="@color/warm" />

                <ImageView
                    android:id="@+id/minTempArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arrow_down_desc"
                    android:src="@drawable/ic_arrow_down"
                    android:tint="@color/cold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rangeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maxTempText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="1dp"
                    android:text="@string/temp_default"
                    android:textColor="@color/warm"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/minTempText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="1dp"
                    android:text="@string/temp_default"
                    android:textColor="@color/cold"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weatherInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/rangeView"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cTempView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/temp_default"
                android:textColor="@android:color/white"
                android:textSize="60sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/weather_icon_desc"
                android:src="@drawable/ic_sync_problem" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>